services/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: default
  labels: { app: worker }
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: { app: worker }
  template:
    metadata:
      labels: { app: worker }
    spec:
      restartPolicy: Always
      containers:
        - name: worker
          image: epitechcontent/t-dop-600-worker:k8s
          resources:
            limits:
              memory: 256M
