services/poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: poll
  namespace: default
spec:
  selector: { app: poll }
  ports:
    - port: 80
      targetPort: 80
